fix(mdl menu): Fix drop down menu overflow display bug

--- a/admin/views/assets/stylesheets/scss/app/_forms.scss
+++ b/admin/views/assets/stylesheets/scss/app/_forms.scss
@@ -45,9 +45,6 @@
 }
 
 // Add to .qor-page__header
-.has-search {
-  padding-right: 80px;
-}
 
 .qor-search {
   height: 56px;
